--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -247,7 +247,7 @@ header {
 .service_title i {
     display: block;
     font-size: 40px;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
     padding-top: 30px;
     text-align: center;
     width: 350px;
@@ -280,7 +280,7 @@ header {
     font-size: 25px;
     color: white;
     text-shadow: 1px 1px 10px black;
-    padding-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 
@@ -293,12 +293,12 @@ header {
 
 .photo-title {
     text-align: center;
-    padding-top: 40px
+    margin-top: 40px
 }
 
 .photo-diapo {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .diapo {
@@ -341,7 +341,7 @@ header {
 
 .photo-btn {
     text-align: center;
-    padding-bottom: 40px;
+    margin-bottom: 40px;
     height: 100px;
 
 
@@ -368,6 +368,8 @@ header {
 
 .liked-title {
     height: 600px;
+    padding-top: 15px;;
+
 }
 
 .avis_client_full {
@@ -396,7 +398,7 @@ header {
 
 #menu-deroulant,
 #menu-deroulant ul {
-    padding: 0;
+    margin: 0;
     margin-left: 85px;
     list-style: none;
 }
@@ -404,7 +406,7 @@ header {
 .menu {
     display: block;
     margin: auto;
-    padding: 50px;
+    margin: 50px;
     height: 40px;
 
 }
@@ -418,7 +420,7 @@ header {
 #menu-deroulant ul li {
 
     display: inherit;
-    padding: 10px 0 10px;
+    margin: 10px 0 10px;
     width: 300px;
 }
 
@@ -548,7 +550,7 @@ CONTACT*
 }
 
 .contact_title {
-    padding-bottom: 40px;
+    margin-bottom: 40px;
     padding-top: 30px
 }
 
@@ -675,13 +677,7 @@ mediaquerries
     .navbar-light .navbar-nav .nav-link {
    font-size: 15px;  
 }
-    h1{
-        font-size: 30px
-    }
-    .pinte {
-        font-size: 10px;
-    }
-
+    
     h2 {
         font-size: 35px;
     }
@@ -695,7 +691,12 @@ mediaquerries
     .happy_our_img{
         width:100%;
         height:300px;
+        
     }
+.row_happy-hour{
+flex-direction: column;
+}
+  
 .service_title p {
     font-size: 15px;
 }
@@ -703,26 +704,41 @@ mediaquerries
     
     padding-right:150px
 } 
+
+.section_like{
+
+    display: none;
 }
 
-/* @media all and (max-width: 991px) {
-    ...
+
 }
+
+ @media all and (max-width: 991px) {
+h1{
+    font-size:2rem;
+}
+.abreu_header{
+font-size: 70px;
+
+}
+} 
 
 @media all and (max-width: 768px) {
-
-    h2 {
-        10px;
+    h1{
+        margin-top: 90px;;
+        font-size:1.5rem;
     }
+    .abreu_header{
+    font-size: 40px;
+    
+    }
+  
 }
     
-    .menu img{
-        margin:0px,
-    }    
-    
+  
     
     
 
 @media all and (max-width: 575px) {
     ...
-} */
+}
